test/types/enum/ferguson/badenum.good
badenum.chpl:2: error: this enum cannot be represented with a single integer type
