test/types/enum/ferguson/badenum.chpl

enum myenum { a = -1, b = 0x8000000000000000 }

writeln(myenum.a:int);
writeln(myenum.b:uint);
